saveAdPhotos method works